@@ -110,7 +110,7 @@ $tasks[] = 'Adding the default filters';
 
 //	Add the pretty_root_url and pretty_enable_filters settings:
 $pretty_root_url = isset($modSettings['pretty_root_url']) ? $modSettings['pretty_root_url'] : $boardurl;
-$pretty_enable_filters = isset($modSettings['pretty_enable_filters']) ? $modSettings['pretty_enable_filters'] : '0';
+$pretty_enable_filters = isset($modSettings['pretty_enable_filters']) ? $modSettings['pretty_enable_filters'] : 0;
 
 //	Update the settings table
 updateSettings(array(
@@ -150,8 +150,8 @@ $task_list .= '</li></ul>';
 //	Output the list of database changes
 if (isset($standalone))
 {
-	echo '<title>Installing Pretty URLs - Base 0.9</title>
-<h1>Installing Pretty URLs - Base 0.9</h1>
+	echo '<title>Installing Pretty URLs - Base 0.8.2</title>
+<h1>Installing Pretty URLs - Base 0.8.2</h1>
 <h2>Database changes</h2>
 ', $task_list ;
 }
